--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-        "build": "node build/build.js",
+        "build": "node build/build.mjs",
         "public": "npm publish ./dist --access public --ignore-scripts"
     },
     "peerDependencies": {
